# readers

./: hello.py  pyproject.toml  readers.py
csv/: problem.csv
raw/: collie_sentence_bert_filter.dill  hotpotqa_sentence_bert_filter.json  usaco_bronze.jsonl
