[project]
name = "reasoning-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "collie>=1.3.1",
    "collie-bench>=0.1.0",
    "dill>=0.3.9",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
]
